--- a/Index.html
+++ b/Index.html
@@ -104,7 +104,7 @@
               <i class="fa fa-video-camera" aria-hidden="true"></i>
               <h2>Videographer</h2>
               <p>
-                Kisah Anda dalam gerak, kami abadikan dengan kepiawaian
+                Kisah Anda dalam gerak, kami abadikan dengan kepiawayian
                 videografi kami.
               </p>
             </div>
