--- a/Index.html
+++ b/Index.html
@@ -64,20 +64,20 @@
 
       <div data-aos="fade-up">
         <div class="header-content">
-          <h1>Solusi Profesional untuk Kebutuhan Anda</h1>
+          <h1 class="judul-utama">TaqwaTutor</h1>
           <div class="line"></div>
-          <h2>TaqwaTutor</h2>
+          <p class="caption">Solusi Profesional untuk Kebutuhan Anda</p>
           <a href="#" class="ctn">Learmore</a>
         </div>
       </div>
     </header>
     <main>
       <!-- =======jasa====== -->
-
-      <section class="jasa">
+      <article>
         <div class="wadah">
           <div class="title2">
-            <h1>YOU NEED OUR HELP ?</h1>
+            <h2>LAYANAN JASA</h2>
+            <p>YOU NEED OUR HELP ?</p>
             <p>
               Kami siap beradaptasi dengan kebutuhan unik Anda dan menyediakan
               solusi yang sesuai. Kepuasan Anda adalah prioritas utama kami.
@@ -86,7 +86,7 @@
           <div class="jasa-wrapper grid">
             <div data-aos="fade-right" class="jasa2">
               <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-              <h2>Design</h2>
+              <h3>Design</h3>
               <p>
                 Transformasi visual kreatif untuk proyek unik Anda, dari awal
                 hingga selesai.
@@ -94,7 +94,7 @@
             </div>
             <div data-aos="fade-down" class="jasa2">
               <i class="fa fa-camera" aria-hidden="true"></i>
-              <h2>Photographer</h2>
+              <h3>Photographer</h3>
               <p>
                 Tangkap momen berharga dengan keahlian fotografi kami yang
                 berpengalaman.
@@ -102,7 +102,7 @@
             </div>
             <div data-aos="fade-left" class="jasa2">
               <i class="fa fa-video-camera" aria-hidden="true"></i>
-              <h2>Videographer</h2>
+              <h3>Videographer</h3>
               <p>
                 Kisah Anda dalam gerak, kami abadikan dengan kepiawayian
                 videografi kami.
@@ -110,7 +110,7 @@
             </div>
             <div data-aos="fade-right" class="jasa2">
               <i class="fa fa-film" aria-hidden="true"></i>
-              <h2>Video Editor</h2>
+              <h3>Video Editor</h3>
               <p>
                 Edit video profesional untuk mempercantik cerita Anda, mulai
                 dari ide hingga tayangan.
@@ -118,7 +118,7 @@
             </div>
             <div data-aos="fade-up" class="jasa2">
               <i class="fa fa-file" aria-hidden="true"></i>
-              <h2>Photo Editor</h2>
+              <h3>Photo Editor</h3>
               <p>
                 Menghadirkan kesempurnaan dalam setiap detail melalui jasa edit
                 foto kami
@@ -126,39 +126,19 @@
             </div>
             <div data-aos="fade-left" class="jasa2">
               <i class="fa fa-desktop" aria-hidden="true"></i>
-              <h2>Web Maker</h2>
+              <h3>Web Maker</h3>
               <p>
                 Kami mewujudkan vbisi Anda dalam situs web yang mengesankan.
               </p>
             </div>
           </div>
         </div>
-      </section>
+      </article>
 
-      <section class="profil">
-        <div data-aos="fade-up" class="profil-content">
-          <div class="wadah">
-            <div class="title">
-              <h1>PT. TAQWATUTOR</h1>
-              <p>
-                Temukan beragam layanan yang kami tawarkan di TaqwaTutor. Kami
-                siap memenuhi berbagai kebutuhan Anda dengan solusi berkualitas
-                tinggi dan pelayanan unggul.
-              </p>
-            </div>
-            <div class="review">
-              <img src="./img/ceo4.png" alt="" />
-              <h2>Rofik Hidayat</h2>
-              <h4>Chief Executive Officer</h4>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="porto">
+      <article class="porto">
         <div class="porto2">
           <div data-aos="fade-right" class="col content-col">
-            <h1>PORTOFOLIO OF WORK RESULTS</h1>
+            <h2>PORTOFOLIO HASIL KERJA</h2>
             <div class="line"></div>
             <p>
               Portofolio kami mencerminkan dedikasi kami untuk keunggulan.
@@ -166,7 +146,7 @@
               kami. Lihatlah beragam proyek yang telah kami selesaikan, dan mari
               kita mulai mewujudkan visi Anda bersama-sama.
             </p>
-            <a href="#" class="ctn">Learmore</a>
+            <a href="#" class="ctn">Selengkapnya</a>
           </div>
           <div data-aos="fade-left" class="col image-col">
             <div class="foto">
@@ -179,14 +159,34 @@
             </div>
           </div>
         </div>
-      </section>
+      </article>
+
+      <!-- =======patner====== -->
+
+      <article class="patner">
+        <div class="wadah">
+          <div class="title">
+            <h2>PATNER KAMI</h2>
+            <p>
+              Partner kami adalah inti kesuksesan. Bersama, kita menciptakan
+              inovasi, berbagi visi, dan memajukan tujuan bersama dalam harmoni.
+            </p>
+          </div>
+          <div class="patner-wrapper grid">
+            <img src="./img/11.png" alt="" />
+            <img src="./img/66.png" alt="" />
+            <img src="./img/33.png" alt="" />
+            <img src="./img/44.png" alt="" />
+          </div>
+        </div>
+      </article>
 
       <!-- ======Tagline Bawah -->
 
-      <section class="diskusi">
+      <article class="diskusi">
         <div class="ctn-wrapper">
           <div class="teks">
-            <h1>Ruang Diskusi</h1>
+            <h2>Ruang Diskusi</h2>
             <p>
               Bagi yang ingin berdiskusi dan bertanya mengenai jasa-jasa di
               perusahaan kami, anda bisa menghubungi nomor yang tertera
@@ -194,30 +194,28 @@
           </div>
           <button class="ctn">+62-8233-2058450</button>
         </div>
-      </section>
+      </article>
+    </main>
 
-      <!-- =======patner====== -->
-
-      <section class="patner">
+    <!-- Ditaruh Di paling bawah -->
+    <aside class="profil">
+      <div data-aos="fade-up" class="profil-content">
         <div class="wadah">
-          <div data-aos="fade-down" class="title">
-            <h1>OUR PARTNERS</h1>
+          <div class="title">
+            <h2>PT. TAQWATUTOR DI INDONESIA</h2>
             <p>
-              Partner kami adalah inti kesuksesan. Bersama, kita menciptakan
-              inovasi, berbagi visi, dan memajukan tujuan bersama dalam harmoni.
+              PT. TaqwaTutor adalah perusahaan layanan yang tidak hanya fokus
+              dalam segi jasa, tapi juga menyediakan program pembelajaran ilmu
+              pengetahuan, dengan fokus pada inovasi teknologi dan pendekatan
+              interaktif.
             </p>
           </div>
-          <div data-aos="fade-up" class="patner-wrapper grid">
-            <img src="./img/11.png" alt="" />
-            <img src="./img/66.png" alt="" />
-            <img src="./img/33.png" alt="" />
-            <img src="./img/44.png" alt="" />
-            <img src="./img/55.png" alt="" />
-            <img src="./img/22.png" alt="" />
+          <div class="review">
+            <img src="cabang.png" alt="" />
           </div>
         </div>
-      </section>
-    </main>
+      </div>
+    </aside>
 
     <!-- Footer -->
 
@@ -233,13 +231,12 @@
           <ul class="media">
             <li><div class="fa fa-facebook"></div></li>
             <li><div class="fa fa-twitter"></div></li>
-            <li><div class="fa fa-github"></div></li>
+            <li><div class="fa fa-instagram"></div></li>
             <li><div class="fa fa-youtube"></div></li>
           </ul>
         </div>
         <div class="col">
           <p class="judul3">Perusahaan</p>
-          <!-- <h3>Perusahaan</h3> -->
           <ul class="footer-link">
             <li>Home</li>
             <li>About</li>
@@ -250,7 +247,6 @@
 
         <div class="col">
           <p class="judul3">Tautan Cepat</p>
-          <!-- <h3>Tautan Cepat</h3> -->
           <ul class="footer-link">
             <li>Layanan</li>
             <li>Portofolio</li>
@@ -261,7 +257,6 @@
 
         <div class="col">
           <p class="judul3">Kontak Kami</p>
-          <!-- <h3>Kontak Kami</h3> -->
           <ul class="footer-link">
             <li>Email:taqwatutor@gmail.com</li>
             <li>Telepon: +6282332058450</li>
