--- a/Index.html
+++ b/Index.html
@@ -67,7 +67,7 @@
           <h1 class="judul-utama">TaqwaTutor</h1>
           <div class="line"></div>
           <p class="caption">Solusi Profesional untuk Kebutuhan Anda</p>
-          <a href="#" class="ctn">Learmore</a>
+          <a href="#" class="ctn">Selengkapnya</a>
         </div>
       </div>
     </header>
@@ -173,10 +173,10 @@
             </p>
           </div>
           <div class="patner-wrapper grid">
-            <img src="./img/11.png" alt="" />
-            <img src="./img/66.png" alt="" />
-            <img src="./img/33.png" alt="" />
-            <img src="./img/44.png" alt="" />
+            <img class="satu" src="./img/11.png" alt="" />
+            <img class="dua" src="./img/66.png" alt="" />
+            <img class="tiga" src="./img/33.png" alt="" />
+            <img class="empat" src="./img/44.png" alt="" />
           </div>
         </div>
       </article>
@@ -195,27 +195,26 @@
           <button class="ctn">+62-8233-2058450</button>
         </div>
       </article>
-      
-    <aside class="profil">
-      <div data-aos="fade-up" class="profil-content">
-        <div class="wadah">
-          <div class="title">
-            <h2>PT. TAQWATUTOR DI INDONESIA</h2>
-            <p>
-              PT. TaqwaTutor adalah perusahaan layanan yang tidak hanya fokus
-              dalam segi jasa, tapi juga menyediakan program pembelajaran ilmu
-              pengetahuan, dengan fokus pada inovasi teknologi dan pendekatan
-              interaktif.
-            </p>
-          </div>
-          <div class="review">
-            <img src="cabang.png" alt="" />
+
+      <aside class="profil">
+        <div data-aos="fade-up" class="profil-content">
+          <div class="wadah">
+            <div class="title">
+              <h2>PT. TAQWATUTOR DI INDONESIA</h2>
+              <p>
+                PT. TaqwaTutor adalah perusahaan layanan yang tidak hanya fokus
+                dalam segi jasa, tapi juga menyediakan program pembelajaran ilmu
+                pengetahuan, dengan fokus pada inovasi teknologi dan pendekatan
+                interaktif.
+              </p>
+            </div>
+            <div class="review">
+              <img src="cabang.png" alt="" />
+            </div>
           </div>
         </div>
-      </div>
-    </aside>
+      </aside>
     </main>
-
 
     <!-- Footer -->
 
@@ -226,7 +225,7 @@
           <p>
             Kami berterima kasih atas kepercayaan dan kesempatan untuk melayani
             Anda dengan baik. Hubungi kami untuk diskusi lebih lanjut tentang
-            bagaimana kami dapat membantu mencapai tujuan Anda.
+            bagaimana kami bekerja untuk dapat membantu mencapai tujuan Anda.
           </p>
           <ul class="media">
             <li><div class="fa fa-facebook"></div></li>
@@ -258,13 +257,12 @@
         <div class="col">
           <p class="judul3">Kontak Kami</p>
           <ul class="footer-link">
-            <li>Email:taqwatutor@gmail.com</li>
-            <li>Telepon: +6282332058450</li>
-            <li>Alamat: Jl. Kh. Moh Kholil Bangkalan</li>
+            <li>Email : taqwatutor20@gmail.com</li>
+            <li>Telepon : +6282332058450</li>
+            <li>Alamat : Jl. Kh. Moh Kholil Bangkalan</li>
           </ul>
         </div>
       </div>
-
       <hr />
       <div class="copyright">
         <p>&copy; 2023 TaqwaTutor. Hak Cipta Dilindungi</p>
