--- a/Index.html
+++ b/Index.html
@@ -53,11 +53,11 @@
           <img src="Logo2.png" alt="" />
         </div>
         <ul class="nav-links">
-          <li class="active"><a href="#"></a>Home</li>
-          <li><a href="#"></a>Service</li>
-          <li><a href="#"></a>Map</li>
-          <li><a href="#"></a>About</li>
-          <li class="ctn"><a href="#"></a>Contact</li>
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">Service</a></li>
+          <li><a href="#">Map</a></li>
+          <li><a href="#">About</a></li>
+          <li class="ctn"><a href="#">Contact</a></li>
         </ul>
         <img src="menu-btn2.png" alt="" class="menu-btn" />
       </nav>
@@ -73,64 +73,60 @@
     </header>
     <main>
       <!-- =======jasa====== -->
-      <article>
-        <div class="wadah">
-          <div class="title2">
-            <h2>LAYANAN JASA</h2>
-            <p>YOU NEED OUR HELP ?</p>
+      <article class="wadah">
+        <div class="title2">
+          <h2>LAYANAN JASA</h2>
+          <p>YOU NEED OUR HELP ?</p>
+          <p>
+            Kami siap beradaptasi dengan kebutuhan unik Anda dan menyediakan
+            solusi yang sesuai. Kepuasan Anda adalah prioritas utama kami.
+          </p>
+        </div>
+        <div class="jasa-wrapper grid">
+          <div data-aos="fade-right" class="jasa2">
+            <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+            <h3>Design</h3>
             <p>
-              Kami siap beradaptasi dengan kebutuhan unik Anda dan menyediakan
-              solusi yang sesuai. Kepuasan Anda adalah prioritas utama kami.
+              Transformasi visual kreatif untuk proyek unik Anda, dari awal
+              hingga selesai.
             </p>
           </div>
-          <div class="jasa-wrapper grid">
-            <div data-aos="fade-right" class="jasa2">
-              <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-              <h3>Design</h3>
-              <p>
-                Transformasi visual kreatif untuk proyek unik Anda, dari awal
-                hingga selesai.
-              </p>
-            </div>
-            <div data-aos="fade-down" class="jasa2">
-              <i class="fa fa-camera" aria-hidden="true"></i>
-              <h3>Photographer</h3>
-              <p>
-                Tangkap momen berharga dengan keahlian fotografi kami yang
-                berpengalaman.
-              </p>
-            </div>
-            <div data-aos="fade-left" class="jasa2">
-              <i class="fa fa-video-camera" aria-hidden="true"></i>
-              <h3>Videographer</h3>
-              <p>
-                Kisah Anda dalam gerak, kami abadikan dengan kepiawayian
-                videografi kami.
-              </p>
-            </div>
-            <div data-aos="fade-right" class="jasa2">
-              <i class="fa fa-film" aria-hidden="true"></i>
-              <h3>Video Editor</h3>
-              <p>
-                Edit video profesional untuk mempercantik cerita Anda, mulai
-                dari ide hingga tayangan.
-              </p>
-            </div>
-            <div data-aos="fade-up" class="jasa2">
-              <i class="fa fa-file" aria-hidden="true"></i>
-              <h3>Photo Editor</h3>
-              <p>
-                Menghadirkan kesempurnaan dalam setiap detail melalui jasa edit
-                foto kami
-              </p>
-            </div>
-            <div data-aos="fade-left" class="jasa2">
-              <i class="fa fa-desktop" aria-hidden="true"></i>
-              <h3>Web Maker</h3>
-              <p>
-                Kami mewujudkan vbisi Anda dalam situs web yang mengesankan.
-              </p>
-            </div>
+          <div data-aos="fade-down" class="jasa2">
+            <i class="fa fa-camera" aria-hidden="true"></i>
+            <h3>Photographer</h3>
+            <p>
+              Tangkap momen berharga dengan keahlian fotografi kami yang
+              berpengalaman.
+            </p>
+          </div>
+          <div data-aos="fade-left" class="jasa2">
+            <i class="fa fa-video-camera" aria-hidden="true"></i>
+            <h3>Videographer</h3>
+            <p>
+              Kisah Anda dalam gerak, kami abadikan dengan kepiawayian
+              videografi kami.
+            </p>
+          </div>
+          <div data-aos="fade-right" class="jasa2">
+            <i class="fa fa-film" aria-hidden="true"></i>
+            <h3>Video Editor</h3>
+            <p>
+              Edit video profesional untuk mempercantik cerita Anda, mulai dari
+              ide hingga tayangan.
+            </p>
+          </div>
+          <div data-aos="fade-up" class="jasa2">
+            <i class="fa fa-file" aria-hidden="true"></i>
+            <h3>Photo Editor</h3>
+            <p>
+              Menghadirkan kesempurnaan dalam setiap detail melalui jasa edit
+              foto kami
+            </p>
+          </div>
+          <div data-aos="fade-left" class="jasa2">
+            <i class="fa fa-desktop" aria-hidden="true"></i>
+            <h3>Web Maker</h3>
+            <p>Kami mewujudkan vbisi Anda dalam situs web yang mengesankan.</p>
           </div>
         </div>
       </article>
